@@ -1,6 +1,6 @@
 useDynLib("smacof", .registration = TRUE)
 import("stats", "graphics", "Hmisc", "colorspace", "polynom", "nnls", "MASS", "weights", "plotrix", "parallel", "foreach", "doParallel")
-importFrom("grDevices", "dev.new", "hcl", "chull")
+importFrom("grDevices", "dev.new", "hcl", "chull", "colorRampPalette")
 importFrom("ellipse", "ellipse")
 importFrom("wordcloud", "textplot")
 importFrom("candisc", "vecscale")
@@ -19,7 +19,6 @@ export(mds)
 export(unfolding)
 export(torgerson)
 export(uniscale)
-export(inverseMDS)
 export(randomstress)
 export(Procrustes)
 export(driftVectors)
@@ -74,6 +73,5 @@ S3method(plot, procr)
 S3method(print, procr)
 S3method(plot, driftvec)
 S3method(print, driftvec)
-S3method(print, imds)
 S3method(plot, vmu)
 S3method(print, vmu)
