@@ -1,6 +1,0 @@
-print.imds <- function(x, ...) {
-  cat("\nCall: ")
-  print(x$call)
-  cat("\n")
-  cat("Number of dissimilarity matrices found:", length(x$dissmat),"\n\n")
-}
