@@ -14,8 +14,8 @@ alpha = 0.05, verbose = FALSE, ...)
 
 \method{plot}{smacofboot}(x, plot.dim = c(1,2), col = 1, 
 label.conf = list(label = TRUE, pos = 3, cex = 0.8), 
-ell = list(lty = 1, lwd = 1), main, xlab, ylab, xlim, ylim, asp = 1, 
-type = "p", pch = 20, ...)
+ell = list(lty = 1, lwd = 1, col = "gray"), main, xlab, ylab, xlim, ylim, 
+asp = 1, type = "p", pch = 20, ...)
 }
 %- maybe also 'usage' for other objects documented here.
 \arguments{
@@ -29,7 +29,7 @@ type = "p", pch = 20, ...)
  
   \item{x}{Object of class \code{"smacofboot"}}
   \item{plot.dim}{Vector with dimensions to be plotted.}
-  \item{col}{Color for points/ellipses.}
+  \item{col}{Color for points.}
   \item{label.conf}{List with arguments for plotting the labels of the configurations in a configuration plot (logical value whether to plot labels or not, label position). If \code{pos = 5} labels are placed away from the nearest point.}
   \item{ell}{List with arguments for plotting ellipses: line type, line width, color.}
   \item{main}{Plot title.}
